--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "sass": "^1.52.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "5.3.5",
+    "swiper": "^8.1.5"
   },
   "devDependencies": {
     "eslint": "8.15.0",
