--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-gtm-module": "^2.0.11",
     "styled-components": "5.3.5",
     "swiper": "^8.1.5"
   },
