nuevo hook agregado y mejoras en la animaciones

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "6.3.10",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-gtm-module": "2.0.11",
+    "scrollreveal": "^4.0.9",
     "styled-components": "5.3.5",
     "swiper": "8.1.5"
   },
